fixing mobile layout issues

--- a/public/styles/drunkbottle.css
+++ b/public/styles/drunkbottle.css
@@ -137,11 +137,18 @@ video {
 
 #activity_buttons .page {
 	position : relative;
-	display : flex;
+	display:-webkit-flex;
+    display:-webkit-box;
+    display:-moz-flex;
+    display:-moz-box;
+    display:-ms-flexbox;
+    display:flex;
 	justify-content: space-around;
+	-webkit-box-pack: center;
 	float: left;
 	width: 25%;
 	height: 500px;
+	-webkit-margin : 0 1.2%;
 }
 
 .activity_button {
@@ -150,6 +157,7 @@ video {
 	width: 9.271523178808%;
 	transition : right 1s 0, transform .25s 0;
 	right: 0%;
+	margin : 0 1%;
 }
 
 .activity_button:hover {
